--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.14.2",
     "base-64": "^1.0.0",
     "expo": "~40.0.0",
+    "expo-client": "^0.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "react": "16.13.1",
