--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "expo-client": "^0.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
+    "immer": "^9.0.1",
+    "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -27,7 +29,12 @@
     "react-native-restart": "0.0.20",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "^2.15.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.3",
+    "react-redux-firebase": "^3.10.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
